--- a/dockerfile-kasm-chrome
+++ b/dockerfile-kasm-chrome
@@ -29,6 +29,9 @@ RUN chmod +x $STARTUPDIR/custom_startup.sh
 # COPY ./src/ubuntu/install/certificates $INST_SCRIPTS/certificates/
 # RUN bash $INST_SCRIPTS/certificates/install_ca_cert.sh && rm -rf $INST_SCRIPTS/certificates/
 
+ENV KASM_RESTRICTED_FILE_CHOOSER=1
+COPY ./src/ubuntu/install/gtk/ $INST_SCRIPTS/gtk/
+RUN $INST_SCRIPTS/gtk/install_restricted_file_chooser.sh
 
 
 ######### End Customizations ###########
