--- a/dockerfile-kasm-chrome-flash
+++ b/dockerfile-kasm-chrome-flash
@@ -29,6 +29,10 @@ RUN chmod +x $STARTUPDIR/custom_startup.sh
 COPY ./src/ubuntu/install/chrome_flash $INST_SCRIPTS/chrome_flash/
 RUN bash $INST_SCRIPTS/chrome_flash/install_flash.sh  && rm -rf $INST_SCRIPTS/chrome_flash/
 
+ENV KASM_RESTRICTED_FILE_CHOOSER=1
+COPY ./src/ubuntu/install/gtk/ $INST_SCRIPTS/gtk/
+RUN $INST_SCRIPTS/gtk/install_restricted_file_chooser.sh
+
 
 ######### End Customizations ###########
 
