--- a/dockerfile-kasm-brave
+++ b/dockerfile-kasm-brave
@@ -25,6 +25,10 @@ ENV LAUNCH_URL  http://kasmweb.com
 COPY ./src/ubuntu/install/brave/custom_startup.sh $STARTUPDIR/custom_startup.sh
 RUN chmod +x $STARTUPDIR/custom_startup.sh
 
+ENV KASM_RESTRICTED_FILE_CHOOSER=1
+COPY ./src/ubuntu/install/gtk/ $INST_SCRIPTS/gtk/
+RUN $INST_SCRIPTS/gtk/install_restricted_file_chooser.sh
+
 ######### End Customizations ###########
 
 RUN chown 1000:0 $HOME
@@ -35,4 +39,3 @@ WORKDIR $HOME
 RUN mkdir -p $HOME && chown -R 1000:0 $HOME
 
 USER 1000
-
